# Radish

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COPYRIGHT  Directory.Build.props  GEMINI.md  GitHistory-CoAuthor-Cleanup.md  INSTALL_WINDOWS.md  LICENSE  NuGet.Config  README.md  RUST_DIRECTORY_RESTRUCTURE.md  RUST_EXTENSION_COMPLETE.md  Radish.abpmdl  Radish.abpsln  Radish.sln  Radish.slnLaunch  Radish.slnx  TESTING_GUIDE.md  WORKSPACE_SETUP.md  appsettings.Shared.json  install-windows.ps1  local-start.ps1  local-start.sh  package-lock.json  package.json  setup-workspace-links.ps1  start-radish-server.ps1  start.ps1  start.sh  tsconfig.base.json  version.json
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.run/: GAA.run.xml  Radish.Api.Tests.run.xml  Radish.Api_ http.run.xml  Radish.Auth_ http.run.xml  Radish.DbMigrate.run.xml  Radish.Gateway_ http.run.xml  Radish.Gateway_ https.run.xml
Certs/: README.md  dev-auth-cert.pfx  dev-gateway-cert.pfx
Clients/radish-tauri/: Cargo.toml  README.md  tauri.conf.json
Clients/radish-tauri/capabilities/: default.json
Clients/radish-tauri/src/: lib.rs  main.rs
DataBases/: README.md
Deploy/: .env.example  .env.prod.example  .env.test.example  docker-compose.dev.yml  docker-compose.local.yaml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  nginx.prod.conf
Docs/: README.md  development-plan.md  index.md
Frontend/: Dockerfile  README.md
Frontend/radish.client/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/radish.client/src-tauri/src/: lib.rs  main.rs
Lib/: README.md
Radish.Api/: Dockerfile  ForumApiTestGuide.md  Program.cs  Radish.Api.AuthFlow.http  Radish.Api.csproj  Radish.Api.http  Radish.Api.oidc.http  Radish.db  RadishBackup.db  RadishLog.db  WeatherForecast.cs  appsettings.Development.json  appsettings.Local.example.json  appsettings.Local.json.example  appsettings.Production.json  appsettings.json  http-client.env.json
Radish.Api.Tests/: AuditLogMiddlewareTests.cs  ClaimsPrincipalNormalizerTests.cs  CorsOriginResolverTests.cs  HttpContextUserTests.cs  ImageProcessorTest.cs  LogPayloadSerializerTests.cs  Radish.Api.Tests.csproj  SensitiveQueryStringLogEnricherTests.cs  SqlSugarAopTests.cs
Radish.Auth/: Dockerfile  Program.cs  Radish.Auth.csproj  appsettings.Local.example.json  appsettings.Local.json.example  appsettings.json
Radish.Auth.Migrations.PostgreSql/: AuthOpenIddictPostgreSqlDesignTimeDbContextFactory.cs  Radish.Auth.Migrations.PostgreSql.csproj
Radish.Auth.Migrations.Sqlite/: AuthOpenIddictSqliteDesignTimeDbContextFactory.cs  Radish.Auth.Migrations.Sqlite.csproj
Radish.Auth.Persistence/: Radish.Auth.Persistence.csproj
Radish.Common/: AopLogInfo.cs  AopLogInfoTool.cs  AppSettings.cs  AppSettingsTool.cs  Class1.cs  ExpressionExtensions.cs  IConfigurableOptions.cs  MethodInfoTool.cs  Radish.Common.csproj  UtilConvert.cs  UtilConvertTool.cs
Radish.Core/: Class1.cs  (+2 more)
Radish.Core/radish-lib/: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
Radish.Core/radish-lib/src/: lib.rs
Radish.Core/radish-lib/src/benchmark/: math.rs
Radish.Core/radish-lib/src/hash/: file_hash.rs
Radish.Core/radish-lib/src/image/: watermark.rs
Radish.Core/radish-lib/src/utils/: mod.rs
Radish.Core/test_lib/: Cargo.toml
Radish.Core/test_lib/src/: lib.rs  test.rs
(+3756 files in other folders)
