[package]
name = "radish-tauri"
version = "26.7.1"
description = "Radish Tauri desktop shell"
authors = ["laugh0608"]
edition = "2021"

[lib]
name = "radish_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "radish-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = { version = "2" }
tauri-plugin-opener = { version = "2" }
tauri-plugin-single-instance = { version = "2" }
url = "2"
