[package]
name = "radish-lib"
version = "0.1.0"
edition = "2024"
authors = ["Radish Team"]
description = "Radish native extensions for high-performance image processing and file operations"
license = "Apache-2.0"

[dependencies]
# Image processing
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"

# Hashing
sha2 = "0.10"

# Error handling
anyhow = "1.0"

[dev-dependencies]

[lib]
name = "radish_lib"
crate-type = ["cdylib"]  # Compile as C-compatible dynamic library

[profile.release]
opt-level = 3             # Maximum optimization
lto = true                # Link-time optimization
codegen-units = 1         # Single code generation unit for better optimization
strip = true              # Strip symbols for smaller binary size
